@@ -146,6 +146,7 @@ struct Core::Private
     std::thread hotkeythread;
 
     bool last_autosave_request{false};
+    bool last_manual_save_request{false};
     bool was_load_save{false};
 };
 
@@ -1847,7 +1848,8 @@ void Core::doUpdate(color_ostream &out)
         strict_virtual_cast<df::viewscreen_savegamest>(screen);
 
     // save data (do this before updating last_world_data_ptr and triggering unload events)
-    if ((df::global::plotinfo->main.autosave_request && !d->last_autosave_request) ||
+    if ((df::global::game->main_interface.options.do_manual_save && !d->last_manual_save_request) ||
+        (df::global::plotinfo->main.autosave_request && !d->last_autosave_request) ||
         (is_load_save && !d->was_load_save && strict_virtual_cast<df::viewscreen_savegamest>(screen)))
     {
         doSaveData(out);
@@ -1910,6 +1912,7 @@ void Core::doUpdate(color_ostream &out)
     onUpdate(out);
 
     d->last_autosave_request = df::global::plotinfo->main.autosave_request;
+    d->last_manual_save_request = df::global::game->main_interface.options.do_manual_save;
     d->was_load_save = is_load_save;
 
     out << std::flush;
