@@ -43,6 +43,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 -@ `automelt`: fixed bug related to lua stack smashing behavior in returned stockpile configs
 -@ `autochop`: fixed bug related to lua stack smashing behavior in returned stockpile configs
 - `nestboxes`: now cancels any in-progress hauling jobs when it protects a fertile egg
+- Fix persisted data not being written on manual save
 
 ## Misc Improvements
 - `automelt`: is now more resistent to savegame corruption
